# rust-reinze

./: .env.example  .gitignore  Cargo.toml  LICENSE  config.example.toml
conf/: config.toml.example
lib/: Database.ini  Ini.ini  bolts.ini  boost.ini  boost.txt  fairy.ini  fairy.txt  ge.json  item.ini  item_db.json  patch.ini  patch.txt  plants.ini  plants.txt  rdrop.ini
sql/: 001_create_colors_table.sql  002_create_rsn_table.sql  003_create_snapshots_table.sql
src/: application.rs  common.rs  main.rs  plugins.rs  timers.rs
src/runescape/: bosses.rs  ge.rs  items.rs  mod.rs  params.rs  players.rs  prices.rs
