[package]
name = "reinze"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
common = { git = "https://github.com/ryanwohara/reinze-lib-common.git", branch = "main", package = "reinze-lib-common" }
futures = "0.3.31"
irc = "1.1.0"
libloading = "0.9.0"
notify = "8.2.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
select = "0.6.1"
tokio = { version = "1.49.0", features = ["full"] }
libc = "0.2.179"
