[package]
name = "reinze"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
common = { git = "https://github.com/ryanwohara/reinze-lib-common.git", branch = "main", package = "reinze-lib-common" }
futures = "0.3.3"
irc = "1.1.0"
libloading = "0.9.0"
notify = "8.2.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
select = "0.6.1"
tokio = { version = "1.49.0", features = ["full"] }
env_logger = "0.11"
log = "0.4"
